--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -7,6 +7,11 @@
   .about h2 {
     margin-bottom: 20px;
   }
+    .descrr {
+    display: block;
+    justify-content: center;
+    margin-top: 150px;
+  }
 }
 @media screen and (min-width: 800px) and (max-width: 2160px) {
   .about {
