--- a/src/pages/project.css
+++ b/src/pages/project.css
@@ -14,6 +14,12 @@
     padding: 10px;
     width: 45%;
   }
+    .descr {
+    margin-top: 150px;
+    display: block;
+    justify-content: center;
+    margin-right: 0%;
+  }
 }
 
 @media screen and (min-width: 800px) and (max-width: 2160px) {
