--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -5,7 +5,7 @@
   font-family: Arial, sans-serif;
 } */
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext");
-.desc {
+.des {
   margin-top: 150px;
 }
 .home {
