--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,9 +1,4 @@
-/* styles.css */
-
-/* body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-} */
+/* 
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext");
 .des {
   margin-top: 100px;
@@ -20,7 +15,7 @@
   .portfolio-image {
     max-width: 100%;
     height: auto;
-    /* margin-top: 20px; */
+    
   }
   .home {
     text-align: center;
@@ -32,7 +27,6 @@
   .box2 {
     width: 100%;
     height: 400px;
-    /* background-color: #4caf50; */
     position: relative;
     display: flex;
     justify-content: center;
@@ -53,13 +47,12 @@
   .aa {
     display: flex;
     justify-content: center;
-    /* background-color: aqua; */
+  
     font-size: 1.3em;
   }
   .bb {
     width: auto;
     height: auto;
-    /* background-color: rgb(114, 45, 90); */
     margin-top: 170px;
     color: black;
     font-size: 30px;
@@ -84,12 +77,9 @@
   .portfolio-image {
     max-width: 100%;
     height: 100%;
-    /* margin-top: 20px; */
-    /* margin-right: 70%; */
   }
   .container {
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     height: 100vh;
   }
@@ -101,7 +91,6 @@
     height: 500px;
     margin: 10px;
     display: flex;
-    /* background-color: transparent; */
     color: white;
     border-radius: 10px;
   }
@@ -110,12 +99,8 @@
     top: -150px;
     width: 1000px;
     height: 600px;
-    /* margin: 10px; */
     display: flex;
     justify-content: center;
-    /* align-items: center; */
-    /* background-color: #4caf50; */
-    /* background-color: transparent; */
     color: white;
     border-radius: 10px;
     flex-direction: column;
@@ -137,8 +122,6 @@
   .aa {
     display: flex;
     justify-content: center;
-    /* background-color: aqua; */
-    /* margin-right: 20%; */
     height: 100px;
     margin-top: -60px;
     font-size: 2.5em;
@@ -146,9 +129,99 @@
   .bb {
     width: auto;
     height: 30px;
-    /* background-color: aqua; */
     margin-top: 170px;
     color: black;
     font-size: 30px;
+  }
+}
+ */
+
+
+body {
+  background-image: url("../assets/images/bgperweb.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.bg::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: -10;
+}
+
+.container,
+.container2 {
+  z-index: 1;
+}
+.gambar {
+  position: relative;
+  width: 600px;
+  height: 700px;
+  margin-left: -300px;
+  margin-top: -140px;
+}
+
+.hello {
+  font-family: "Roboto Mono", monospace;
+  font-weight: 900;
+  font-size: 2em;
+}
+
+.im {
+  font-size: 2em;
+}
+
+.aa {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5em;
+}
+.position-z-index {
+  position: relative;
+  z-index: 1;
+}
+a {
+  color: white;
+}
+a p {
+  font-size: 1rem;
+}
+@media screen and (min-width: 300px) and (max-width: 450px) {
+  .gambar {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    margin-left: -10px;
+    margin-top: -100px;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    border-top: 6rem #000000;
+  }
+}
+@media screen and (min-width: 1080px) and (max-width: 2500px) {
+  .gambar {
+    position: relative;
+    width: 600px;
+    height: 700px;
+    margin-left: -200px;
+    margin-top: -140px;
+  }
+  .sejajar {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .images {
+    padding: 10px;
+    margin: 5px;
+    margin-left: 100px;
+  }
+  .tulisan {
+    padding: 10px;
+    margin: 5px;
   }
 }
