--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 300px) and (max-width: 450px) {
+/* @media screen and (min-width: 300px) and (max-width: 450px) {
   .about {
     padding: 20px;
     text-align: center;
@@ -17,7 +17,6 @@
   .about {
     padding: 20px;
     display: block;
-    /* justify-content: center; */
     text-align: center;
   }
 
@@ -28,5 +27,43 @@
     display: block;
     justify-content: center;
     margin-top: 150px;
+  }
+}
+ */
+
+body {
+  background-image: url("../assets/images/bgperweb.jpg");
+  background-size: cover;
+  background-position: center;
+}
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.83);
+  z-index: -1;
+}
+.a p {
+  font-weight: 1000;
+  font-size: 25px;
+}
+
+@media screen and (min-width: 300px) and (max-width: 450px) {
+  .descrr {
+    margin-top: 50px;
+  }
+  .header h1 {
+    font-size: 1.2rem;
+  }
+  header ul li {
+    font-size: 0.5rem;
+  }
+}
+@media screen and (min-width: 800px) and (max-width: 2160px) {
+  .descrr {
+    margin-top: 70px;
   }
 }
