--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 300px) and (max-width: 450px) {
+/* @media screen and (min-width: 300px) and (max-width: 450px) {
   .contact {
     padding: 20px;
     text-align: center;
@@ -76,9 +76,30 @@
   }
   .desc {
     display: block;
-    /* justify-content: center; */
     margin-top: 150px;
-    /* background-color: #444; */
     width: 100%;
+  }
+}
+ */
+
+.bg {
+  /* background-color: #f8f9fa; */
+  min-height: 100vh;
+  padding-top: 50px;
+}
+
+.desc {
+  margin-top: 180px;
+}
+
+@media screen and (min-width: 300px) and (max-width: 450px) {
+  .desc {
+    margin-top: 50px;
+  }
+}
+
+@media screen and (min-width: 800px) and (max-width: 2160px) {
+  .desc {
+    margin-top: 125px;
   }
 }
