--- a/src/pages/project.css
+++ b/src/pages/project.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 300px) and (max-width: 450px) {
+/* @media screen and (min-width: 300px) and (max-width: 450px) {
   .projects {
     padding: 20px;
     text-align: center;
@@ -43,5 +43,28 @@
     display: block;
     justify-content: center;
     margin-right: 0%;
+  }
+}
+ */
+
+.bg {
+  /* background-color: #f8f9fa; */
+  min-height: 100vh;
+  padding-top: 50px;
+}
+
+.desc {
+  margin-top: 180px;
+}
+
+@media screen and (min-width: 300px) and (max-width: 450px) {
+  .desc {
+    margin-top: 50px;
+  }
+}
+
+@media screen and (min-width: 800px) and (max-width: 2160px) {
+  .desc {
+    margin-top: 125px;
   }
 }
