--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -136,7 +136,7 @@
 }
  */
 
-
+@import url ("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css")
 body {
   background-image: url("../assets/images/bgperweb.jpg");
   background-size: cover;
